Simulator: Continue from snapshot

--- a/admin/app/views/simulator.scala.html
+++ b/admin/app/views/simulator.scala.html
@@ -23,6 +23,9 @@
         <a class="btn btn-sim btn-primary stop" href="@SimulatorController.replayLast" title="Erases the whole Database and plays using a last snapshot.">
             Replay Last Snapshot
         </a>
+        <a class="btn btn-sim btn-primary" href="@SimulatorController.continueSnapshot" title="Continue from snapshot.">
+            Continue from Snapshot
+        </a>
         <a class="btn btn-sim btn-primary" href="@SimulatorController.snapshot" title="Create a snapshot.">
             Create Snapshot
         </a>
