Button empty space removed

--- a/admin/app/views/simulator.scala.html
+++ b/admin/app/views/simulator.scala.html
@@ -20,22 +20,22 @@
     <br/>
 
     <div class="btn-group">
-        <a class="btn btn-sim btn-primary stop" href="@SimulatorController.replayLast" title="Erases the whole Database and plays using a last snapshot.">
+        <a class="btn btn-primary" href="@SimulatorController.replayLast" title="Erases the whole Database and plays using a last snapshot.">
             Replay Last Snapshot
         </a>
-        <a class="btn btn-sim btn-primary" href="@SimulatorController.continueSnapshot" title="Continue from snapshot.">
+        <a class="btn btn-primary" href="@SimulatorController.continueSnapshot" title="Continue from snapshot.">
             Continue from Snapshot
         </a>
-        <a class="btn btn-sim btn-primary" href="@SimulatorController.snapshot" title="Create a snapshot.">
+        <a class="btn btn-primary" href="@SimulatorController.snapshot" title="Create a snapshot.">
             Create Snapshot
         </a>
     </div>
     <hr>
     <div class="btn-group">
-        <a class="btn btn-sim btn-primary ajax" href="@SimulatorController.snapshotDump" title="Saves the Database saved snapshot to disk.">
+        <a class="btn btn-primary ajax" href="@SimulatorController.snapshotDump" title="Saves the Database saved snapshot to disk.">
             Save Snapshot to Disk
         </a>
-        <a class="btn btn-sim btn-primary ajax" href="@SimulatorController.snapshotRestore" title="Load a snapshot from disk to database.">
+        <a class="btn btn-primary ajax" href="@SimulatorController.snapshotRestore" title="Load a snapshot from disk to database.">
             Restore Snapshot from Disk
         </a>
     </div>
