Object Id cleanup

--- a/admin/app/views/team.scala.html
+++ b/admin/app/views/team.scala.html
@@ -5,7 +5,7 @@
         <caption>@team.name</caption>
         <thead>
         <tr>
-            <th>Template SoccerID</th>
+            <!--th>Template SoccerID</th-->
             <th>OptaId</th>
             <th>Name</th>
             <th>Field Pos</th>
@@ -16,7 +16,7 @@
         <tbody>
         @for(p <- team.soccerPlayers) {
         <tr>
-            <td>@p.templateSoccerPlayerId</td>
+            <!--td>@p.templateSoccerPlayerId</td-->
             <td>@p.optaPlayerId</td>
             <td>@p.name</td>
             <td>@p.fieldPos</td>
