--- a/admin/app/views/template_match_event.scala.html
+++ b/admin/app/views/template_match_event.scala.html
@@ -12,7 +12,7 @@
         <thead>
         <caption>@match_event.soccerTeamA.name</caption>
         <tr>
-            <th>Template SoccerID</th>
+            <!--th>Template SoccerID</th-->
             <th>Name</th>
             <th>Field Pos</th>
             <th>Salary</th>
@@ -23,7 +23,7 @@
         <tbody>
         @for(p <- match_event.soccerTeamA.soccerPlayers) {
         <tr>
-            <td>@p.templateSoccerPlayerId</td>
+            <!--td>@p.templateSoccerPlayerId</td-->
             <td>@p.name</td>
             <td>@p.fieldPos</td>
             <td>@p.salary</td>
@@ -37,7 +37,7 @@
         <caption>@match_event.soccerTeamB.name</caption>
         <thead>
         <tr>
-            <th>Template SoccerID</th>
+            <!--th>Template SoccerID</th-->
             <th>Name</th>
             <th>Field Pos</th>
             <th>Salary</th>
@@ -48,7 +48,7 @@
         <tbody>
         @for(p <- match_event.soccerTeamB.soccerPlayers) {
         <tr>
-            <td>@p.templateSoccerPlayerId</td>
+            <!--td>@p.templateSoccerPlayerId</td-->
             <td>@p.name</td>
             <td>@p.fieldPos</td>
             <td>@p.salary</td>
