--- a/admin/app/views/template_match_event_list.scala.html
+++ b/admin/app/views/template_match_event_list.scala.html
@@ -39,7 +39,7 @@
     <table id="table_id" class="table table-striped">
         <thead>
         <tr>
-            <th>Id</th>
+            <!--th>Id</th-->
             <th>OptaId</th>
             <th>OptaTeamAId</th>
             <th>OptaTeamBId</th>
@@ -51,7 +51,7 @@
         <tbody>
         @for(p <- match_events) {
         <tr>
-            <td>@p.templateMatchEventId</td>
+            <!--td>@p.templateMatchEventId</td-->
             <td>@p.optaMatchEventId</td>
             <td>@p.soccerTeamA.optaTeamId</td>
             <td>@p.soccerTeamB.optaTeamId</td>
