--- a/admin/app/views/template_soccer_player_list.scala.html
+++ b/admin/app/views/template_soccer_player_list.scala.html
@@ -11,7 +11,7 @@
     <table id="table_id" class="table table-striped">
         <thead>
         <tr>
-            <th>Id</th>
+            <!--th>Id</th-->
             <th>OptaId</th>
             <th>Name</th>
             <th>Field Pos</th>
@@ -23,7 +23,7 @@
         <tbody>
         @for(p <- soccers) {
         <tr>
-            <td>@p.templateSoccerPlayerId</td>
+            <!--td>@p.templateSoccerPlayerId</td-->
             <td>@p.optaPlayerId</td>
             <td>@p.name</td>
             <td>@p.fieldPos</td>
