--- a/admin/app/views/template_soccer_team.scala.html
+++ b/admin/app/views/template_soccer_team.scala.html
@@ -12,7 +12,7 @@
         <!--caption>@template_soccer_team.name</caption-->
         <thead>
         <tr>
-            <th>Template SoccerID</th>
+            <!--th>Template SoccerID</th-->
             <th>OptaId</th>
             <th>Name</th>
             <th>Field Pos</th>
@@ -23,7 +23,7 @@
         <tbody>
         @for(p <- template_soccer_players) {
         <tr>
-            <td>@p.templateSoccerPlayerId</td>
+            <!--td>@p.templateSoccerPlayerId</td-->
             <td>@p.optaPlayerId</td>
             <td>@p.name</td>
             <td>@p.fieldPos</td>
