--- a/admin/app/views/contest_list.scala.html
+++ b/admin/app/views/contest_list.scala.html
@@ -40,7 +40,7 @@
     <table id="table_id" class="table table-striped">
         <thead>
         <tr>
-            <th>Id</th>
+            <!--th>Id</th-->
             <th>Name</th>
             <th>Current Users</th>
             <th>Max Entries</th>
@@ -52,7 +52,7 @@
         <tbody>
         @for(p <- contests) {
         <tr>
-            <td>@p.contestId</td>
+            <!--td>@p.contestId</td-->
             <td><a href="@ContestController.show(p.contestId.toString())">@p.name</a></td>
             <td>@p.contestEntries.size()</td>
             <td>@p.maxEntries</td>
