--- a/admin/app/views/template_contest_list.scala.html
+++ b/admin/app/views/template_contest_list.scala.html
@@ -45,7 +45,6 @@
             <!--th>Id</th-->
             <th>State</th>
             <th>Name</th>
-            <th>PostName</th>
             <th>Num. Matches</th>
             <th>Min Instances</th>
             <th>Max Entries</th>
@@ -67,8 +66,7 @@
         <tr>
             <!--td>@p.templateContestId</td-->
             <td>@p.state</td>
-            <td>@p.name</td>
-            <td>@p.postName</td>
+            <td><a href="@TemplateContestController.show(p.templateContestId.toString())">@p.name</a></td>
             <td>@p.templateMatchEventIds.size()</td>
             <td>@p.minInstances</td>
             <td>@p.maxEntries</td>
