--- a/admin/app/views/simulator.scala.html
+++ b/admin/app/views/simulator.scala.html
@@ -32,10 +32,10 @@
     </div>
     <hr>
     <div class="btn-group">
-        <a class="btn btn-primary ajax" href="@SimulatorController.snapshotDump" title="Saves the Database saved snapshot to disk.">
+        <a class="btn btn-primary" href="@SimulatorController.snapshotDump" title="Saves the Database saved snapshot to disk.">
             Save Snapshot to Disk
         </a>
-        <a class="btn btn-primary ajax" href="@SimulatorController.snapshotRestore" title="Load a snapshot from disk to database.">
+        <a class="btn btn-primary" href="@SimulatorController.snapshotRestore" title="Load a snapshot from disk to database.">
             Restore Snapshot from Disk
         </a>
     </div>
