--- a/admin/app/views/template_contest_add.scala.html
+++ b/admin/app/views/template_contest_add.scala.html
@@ -85,7 +85,7 @@
 
     <div class="col-md-7">
         <form class="form-horizontal">
-        @input_text(
+        @myInputText(
             templateContestForm("name"),
             "Name",
             50
