Object Ids removed and changes in template contest list

--- a/admin/app/views/live_contest_entry.scala.html
+++ b/admin/app/views/live_contest_entry.scala.html
@@ -19,7 +19,7 @@
 
 @main("Live Contest Entry - Admin", scripts) {
 
-<h1 class="page-header">Live Contest Entry: @contest_entry.contestEntryId</h1>
+<h1 class="page-header">Live Contest Entry</h1>
 
 <h2 class="sub-header"></h2>
 <div class="table-responsive">
