--- a/admin/app/views/template_match_event.scala.html
+++ b/admin/app/views/template_match_event.scala.html
@@ -4,7 +4,7 @@
 
 @main("Mach Event - Admin") {
 
-<h1 class="page-header">Match Event: @match_event.templateMatchEventId</h1>
+<h1 class="page-header">Match Event</h1>
 
 <h2 class="sub-header">Start Date: @match_event.startDate</h2>
 <div class="table-responsive">
