--- a/admin/app/views/template_soccer_team.scala.html
+++ b/admin/app/views/template_soccer_team.scala.html
@@ -4,7 +4,7 @@
 
 @main("Template Soccer Team - Admin") {
 
-<h1 class="page-header">Template Soccer Team: @template_soccer_team.templateSoccerTeamId</h1>
+<h1 class="page-header">Template Soccer Team</h1>
 
 <h2 class="sub-header">@template_soccer_team.name</h2>
 <div class="table-responsive">
