--- a/admin/app/views/template_contest_add.scala.html
+++ b/admin/app/views/template_contest_add.scala.html
@@ -22,10 +22,10 @@
 </div>
 }
 
-@mySelect(field: Field, label: String = "CHANGEME", options: Seq[(String, String)], isMultiple: Boolean = false, size: Int = 1, help: String = "") = {
+@mySelect(field: Field, label: String = "CHANGEME", options: Seq[(String, String)], isMultiple: Boolean = false, size: Int = 1, isHorizontal: Boolean = true, help: String = "") = {
 <div class="form-group @if(field.hasErrors) {has-error}">
-    <label class="col-sm-3 control-label" for="@field.id">@label</label>
-    <div class="col-sm-7">
+    <label @if(isHorizontal){ class="col-sm-3 control-label"} for="@field.id">@label</label>
+    <div @if(isHorizontal){ class="col-sm-7"}>
         @defining( if( isMultiple ) "%s[]".format(field.name) else field.name ) { selectName =>
         @defining( ( !field.indexes.isEmpty && isMultiple ) match {
             case true => field.indexes.map( i => field("[%s]".format(i)).value ).flatten.toSet
@@ -90,7 +90,8 @@
             "Name",
             50
         )
-        <div class="well">
+        <div class="alert alert-info alert-dismissible" role="alert">
+            <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
            En el nombre se pueden usar las variables <code>%MaxEntries</code>, <code>%SalaryCap</code>,
             <code>%PrizeType</code> o <code>%EntryFee</code>.
         </div>
@@ -148,7 +149,8 @@
             "Template Match Events",
             options(matchEventsOptions),
             true,
-            25
+            25,
+            false
         )
     }
     </div>
