--- a/admin/app/views/template_match_event_list.scala.html
+++ b/admin/app/views/template_match_event_list.scala.html
@@ -23,7 +23,7 @@
         <button class="btn btn-danger state_match_event" value="@match_event_id">Finished</button>
     } else {
         @if(TemplateMatchEvent.isStarted(match_event_id)) {
-            <a href="@LiveMatchEventController.showWithTemplate(match_event_id)"><button class="btn btn-success state_match_event" value="@match_event_id">Live</button></a>
+            <button class="btn btn-success state_match_event" value="@match_event_id">Live</button>
         } else {
             <button class="btn btn-warning state_match_event" value="@match_event_id">Waiting</button>
         }
