TemplateContest: al editar se aplica el filtrado de partidos a partir de la fecha de creación

--- a/admin/app/views/template_contest_add.scala.html
+++ b/admin/app/views/template_contest_add.scala.html
@@ -80,6 +80,7 @@
     <legend>Template Contest</legend>
 
     <input type="hidden" name="id" value='@templateContestForm("id").value' >
+    <input type="hidden" name="createdAt" value='@templateContestForm("createdAt").value' >
 
     <div class="col-md-12">
 
