Salaries for players import and export

--- a/admin/app/views/simulator.scala.html
+++ b/admin/app/views/simulator.scala.html
@@ -39,4 +39,15 @@
             Restore Snapshot from Disk
         </a>
     </div>
+    <div class="btn-group">
+        <a class="btn btn-primary" href="@SimulatorController.importSalaries" title="Import Players' salaries from a CSV file.">
+            Import Salaries
+        </a>
+        <a class="btn btn-primary" href="@SimulatorController.importSalariesServer" title="Import Players' salaries from a CSV file onto server.">
+            Send Salaries to Server
+        </a>
+        <a class="btn btn-primary" href="@SimulatorController.exportSalaries" title="Export Players' salaries to a CSV file.">
+            Export Salaries
+        </a>
+    </div>
 }
