Better info at Player Fantasy Points

--- a/admin/app/views/player_fantasy_points.scala.html
+++ b/admin/app/views/player_fantasy_points.scala.html
@@ -1,4 +1,5 @@
 @(soccer_player: model.TemplateSoccerPlayer, opta_events: List[model.opta.OptaEvent])
+@import model.opta.OptaEventType
 
 @scripts = {
 <script type="text/javascript">
@@ -34,15 +35,14 @@
     <table id="table_id" class="table table-striped">
         <thead>
         <tr>
-            <th>Id</th>
+            <th>TypeId</th>
+            <th>Points</th>
+            <th>OptaPlayerId</th>
             <th>CompetitionId</th>
             <th>GameId</th>
             <th>EventId</th>
             <th>HomeTeamId</th>
             <th>AwayTeamId</th>
-            <th>OptaPlayerId</th>
-            <th>TypeId</th>
-            <th>Points</th>
             <th>TimeStamp</th>
             <th>LastModified</th>
         </tr>
@@ -50,15 +50,14 @@
         <tbody>
         @for(p <- opta_events) {
         <tr>
-            <td>@p.optaEventId</td>
+            <td>@OptaEventType.getEnum(p.typeId).name()</td>
+            <td>@p.points</td>
+            <td>@p.optaPlayerId</td>
             <td>@p.competitionId</td>
             <td>@p.gameId</td>
             <td>@p.eventId</td>
             <td>@p.homeTeamId</td>
             <td>@p.awayTeamId</td>
-            <td>@p.optaPlayerId</td>
-            <td>@p.typeId</td>
-            <td>@p.points</td>
             <td>@p.timestamp.format("yyyy/MM/dd HH:mm:ss")</td>
         @if(p.lastModified != null) {
             <td>@p.lastModified.format("yyyy/MM/dd HH:mm:ss")</td>
