Simulator splitted to simulator and snapshot

--- a/admin/app/views/main.scala.html
+++ b/admin/app/views/main.scala.html
@@ -110,7 +110,7 @@
                 <li><a href="@OptaController.optaEvents">Opta Events</a></li>
             </ul>
             <ul class="nav nav-sidebar">
-                <li><a href="@SimulatorController.index">Snapshots</a></li>
+                <li><a href="@SnapshotController.index">Snapshots</a></li>
                 <li><a href="@RefresherController.index">Refresh DB</a></li>
             </ul>
         </div>
