Salaries buttons moved from snapshot to dashboard, server one removed

--- a/admin/app/views/dashboard.scala.html
+++ b/admin/app/views/dashboard.scala.html
@@ -16,4 +16,18 @@
     <a href="@ImportController.showImportSoccers"><button class="btn btn-warning">Import Soccers...</button></a>
     <a href="@ImportController.showImportMatchEvents"><button class="btn btn-warning">Import MatchEvents...</button></a>
 </div>
+<br/>
+<br/>
+
+<div>
+    <div class="btn-group">
+        <a class="btn btn-primary" href="@SnapshotController.importSalaries" title="Import Players' salaries from a CSV file.">
+            Import Salaries
+        </a>
+        <a class="btn btn-primary" href="@SnapshotController.exportSalaries" title="Export Players' salaries to a CSV file.">
+            Export Salaries
+        </a>
+    </div>
+
+</div>
 }
