CORS Access added where needed

--- a/admin/app/views/refresher.scala.html
+++ b/admin/app/views/refresher.scala.html
@@ -33,12 +33,12 @@
          }
 
         function checkDates() {
-            //var temp =  $.ajax({
-            //    url: "http://dailysoccer.herokuapp.com/date_last_xml",
-            //    success: function(result) {
-            //            repaintDateServerLastXML(result);
-            //    }
-            //});
+            var temp =  $.ajax({
+                url: "http://dailysoccer.herokuapp.com/date_last_xml",
+                success: function(result) {
+                        repaintDateServerLastXML(result);
+                }
+            });
             var temp =  $.ajax({
                 url: "/date_last_xml",
                 success: function(result) {
