--- a/admin/app/views/template_contest_list.scala.html
+++ b/admin/app/views/template_contest_list.scala.html
@@ -54,7 +54,6 @@
             <th>Start Date</th>
             <th>Activation At</th>
             <th>State</th>
-            <th></th>
             <!--
             @for(i <- 0 to 10) {
             <th>Match Event @i</th>
@@ -77,10 +76,14 @@
             <td>@p.startDate.format("yyyy/MM/dd HH:mm:ss")</td>
             <td>@p.activationAt.format("yyyy/MM/dd HH:mm:ss")</td>
             <td>@contest_state(p.templateContestId.toString())</td>
-            <td>
-                <a href="@TemplateContestController.edit(p.templateContestId.toString())"><button class="btn btn-success">Edit</button></a>
-                <a href="@TemplateContestController.destroy(p.templateContestId.toString())"><button class="btn btn-danger">-</button></a>
-            </td>
+            @if(p.state.toString().equals("OFF")) {
+                <td>
+                    <a href="@TemplateContestController.edit(p.templateContestId.toString())"><button class="btn btn-success">Edit</button></a>
+                </td>
+                <td>
+                    <a href="@TemplateContestController.destroy(p.templateContestId.toString())"><button class="btn btn-danger">-</button></a>
+                </td>
+            }
         </tr>
         }
         </tbody>
