TemplateMatchEvent: fix en la actualización de estadísticas de los futbolistas
Opta enviaba cambios después de que el partido se hubiera dado por finalizado que no se contabilizaban.

--- a/admin/app/views/template_soccer_player_stats.scala.html
+++ b/admin/app/views/template_soccer_player_stats.scala.html
@@ -7,7 +7,7 @@
 
 <h1 class="page-header">Template Soccer Player Stats</h1>
 
-<h2 class="sub-header">@soccer_player.name</h2>
+<h2 class="sub-header">@soccer_player.name: @soccer_player.fieldPos</h2>
 <div class="table-responsive">
 
     @if(soccer_player.fieldPos == FieldPos.GOALKEEPER) {
